--- a/packages/core/devtools/package.json
+++ b/packages/core/devtools/package.json
@@ -49,7 +49,7 @@
     "rollup-plugin-swc": "leonardssh/rollup-plugin-swc#build",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.3.0",
-    "typescript": "^4.3.5"
+    "typescript": "4.3.5"
   },
   "devDependencies": {
     "@types/ejs": "^3.0.7",
