--- a/packages/core/shared/package.json
+++ b/packages/core/shared/package.json
@@ -31,7 +31,7 @@
     "rxjs": "^7.2.0",
     "tslib": "^2.3.0",
     "tsyringe": "^4.6.0",
-    "typescript": "^4.3.5"
+    "typescript": "4.3.5"
   },
   "peerDependencies": {
     "@altv/types-shared": "^1.0.1"
