--- a/.github/workflows/cd-publish.yml
+++ b/.github/workflows/cd-publish.yml
@@ -87,7 +87,7 @@ jobs:
         shell: bash
         run: |
           cd packages/core/cli/
-          npm publish --tag ${{ needs.extract-version.outputs.tag }}
+          yarn publish --tag ${{ needs.extract-version.outputs.tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
@@ -96,7 +96,7 @@ jobs:
         shell: bash
         run: |
           cd packages/core/cli/
-          npm publish
+          yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
@@ -113,7 +113,7 @@ jobs:
         shell: bash
         run: |
           cd packages/core/client/
-          npm publish --tag ${{ needs.extract-version.outputs.tag }}
+          yarn publish --tag ${{ needs.extract-version.outputs.tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
@@ -122,7 +122,7 @@ jobs:
         shell: bash
         run: |
           cd packages/core/client/
-          npm publish
+          yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
@@ -139,7 +139,7 @@ jobs:
         shell: bash
         run: |
           cd packages/core/devtools/
-          npm publish --tag ${{ needs.extract-version.outputs.tag }}
+          yarn publish --tag ${{ needs.extract-version.outputs.tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
@@ -148,7 +148,7 @@ jobs:
         shell: bash
         run: |
           cd packages/core/devtools/
-          npm publish
+          yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
@@ -165,7 +165,7 @@ jobs:
         shell: bash
         run: |
           cd packages/core/server/
-          npm publish --tag ${{ needs.extract-version.outputs.tag }}
+          yarn publish --tag ${{ needs.extract-version.outputs.tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
@@ -174,7 +174,7 @@ jobs:
         shell: bash
         run: |
           cd packages/core/server/
-          npm publish
+          yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
@@ -191,7 +191,7 @@ jobs:
         shell: bash
         run: |
           cd packages/core/shared/
-          npm publish --tag ${{ needs.extract-version.outputs.tag }}
+          yarn publish --tag ${{ needs.extract-version.outputs.tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
@@ -200,6 +200,6 @@ jobs:
         shell: bash
         run: |
           cd packages/core/shared/
-          npm publish
+          yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
