--- a/packages/core/devtools/package.json
+++ b/packages/core/devtools/package.json
@@ -58,5 +58,8 @@
     "@types/js-yaml": "^4.0.2",
     "@types/lodash": "^4.14.172",
     "@types/progress": "^2.0.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
