--- a/.github/workflows/cd-publish.yml
+++ b/.github/workflows/cd-publish.yml
@@ -86,7 +86,7 @@ jobs:
         shell: bash
         run: |
           cd packages/core/cli/
-          yarn publish --tag ${{ needs.extract-version.outputs.tag }}
+          yarn publish cli.tgz --tag ${{ needs.extract-version.outputs.tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
@@ -95,110 +95,111 @@ jobs:
         shell: bash
         run: |
           cd packages/core/cli/
-          yarn publish
+          yarn publish cli.tgz
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
 
       # Bump & Publish client
 
-      - name: Bump atlas-client package.json version
-        shell: bash
-        run: |
-          cd packages/core/client/
-          echo "`jq '.version="${{ needs.extract-version.outputs.semver }}"' package.json`" > package.json
-
-      - name: Publish atlas-client prerelease
-        if: ${{ needs.extract-version.outputs.tag_set }}
-        shell: bash
-        run: |
-          cd packages/core/client/
-          yarn publish --tag ${{ needs.extract-version.outputs.tag }}
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
-
-      - name: Publish atlas-client release
-        if: "!${{ needs.extract-version.outputs.tag_set }}"
-        shell: bash
-        run: |
-          cd packages/core/client/
-          yarn publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
-
-      # Bump & Publish devtools
-
-      - name: Bump atlas-devtools package.json version
-        shell: bash
-        run: |
-          cd packages/core/devtools/
-          echo "`jq '.version="${{ needs.extract-version.outputs.semver }}"' package.json`" > package.json
-
-      - name: Publish atlas-devtools prerelease
-        if: ${{ needs.extract-version.outputs.tag_set }}
-        shell: bash
-        run: |
-          cd packages/core/devtools/
-          yarn publish --tag ${{ needs.extract-version.outputs.tag }}
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
-
-      - name: Publish atlas-devtools release
-        if: "!${{ needs.extract-version.outputs.tag_set }}"
-        shell: bash
-        run: |
-          cd packages/core/devtools/
-          yarn publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
-
-      # Bump & Publish server
-
-      - name: Bump atlas-server package.json version
-        shell: bash
-        run: |
-          cd packages/core/server/
-          echo "`jq '.version="${{ needs.extract-version.outputs.semver }}"' package.json`" > package.json
-
-      - name: Publish atlas-server prerelease
-        if: ${{ needs.extract-version.outputs.tag_set }}
-        shell: bash
-        run: |
-          cd packages/core/server/
-          yarn publish --tag ${{ needs.extract-version.outputs.tag }}
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
-
-      - name: Publish atlas-server release
-        if: "!${{ needs.extract-version.outputs.tag_set }}"
-        shell: bash
-        run: |
-          cd packages/core/server/
-          yarn publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
-
-      # Bump & Publish shared
-
-      - name: Bump atlas-shared package.json version
-        shell: bash
-        run: |
-          cd packages/core/shared/
-          echo "`jq '.version="${{ needs.extract-version.outputs.semver }}"' package.json`" > package.json
-
-      - name: Publish atlas-shared prerelease
-        if: ${{ needs.extract-version.outputs.tag_set }}
-        shell: bash
-        run: |
-          cd packages/core/shared/
-          yarn publish --tag ${{ needs.extract-version.outputs.tag }}
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
-
-      - name: Publish atlas-shared release
-        if: "!${{ needs.extract-version.outputs.tag_set }}"
-        shell: bash
-        run: |
-          cd packages/core/shared/
-          yarn publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+      #- name: Bump atlas-client package.json version
+      #  shell: bash
+      #  run: |
+      #    cd packages/core/client/
+      #    echo "`jq '.version="${{ needs.extract-version.outputs.semver }}"' package.json`" > package.json
+#
+      #- name: Publish atlas-client prerelease
+      #  if: ${{ needs.extract-version.outputs.tag_set }}
+      #  shell: bash
+      #  run: |
+      #    cd packages/core/client/
+      #    yarn publish  --tag ${{ needs.extract-version.outputs.tag }}
+      #  env:
+      #    NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+#
+      #- name: Publish atlas-client release
+      #  if: "!${{ needs.extract-version.outputs.tag_set }}"
+      #  shell: bash
+      #  run: |
+      #    cd packages/core/client/
+      #    yarn publish
+      #  env:
+      #    NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+#
+      ## Bump & Publish devtools
+#
+      #- name: Bump atlas-devtools package.json version
+      #  shell: bash
+      #  run: |
+      #    cd packages/core/devtools/
+      #    echo "`jq '.version="${{ needs.extract-version.outputs.semver }}"' package.json`" > package.json
+#
+      #- name: Publish atlas-devtools prerelease
+      #  if: ${{ needs.extract-version.outputs.tag_set }}
+      #  shell: bash
+      #  run: |
+      #    cd packages/core/devtools/
+      #    yarn publish --tag ${{ needs.extract-version.outputs.tag }}
+      #  env:
+      #    NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+#
+      #- name: Publish atlas-devtools release
+      #  if: "!${{ needs.extract-version.outputs.tag_set }}"
+      #  shell: bash
+      #  run: |
+      #    cd packages/core/devtools/
+      #    yarn publish
+      #  env:
+      #    NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+#
+      ## Bump & Publish server
+#
+      #- name: Bump atlas-server package.json version
+      #  shell: bash
+      #  run: |
+      #    cd packages/core/server/
+      #    echo "`jq '.version="${{ needs.extract-version.outputs.semver }}"' package.json`" > package.json
+#
+      #- name: Publish atlas-server prerelease
+      #  if: ${{ needs.extract-version.outputs.tag_set }}
+      #  shell: bash
+      #  run: |
+      #    cd packages/core/server/
+      #    yarn publish --tag ${{ needs.extract-version.outputs.tag }}
+      #  env:
+      #    NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+#
+      #- name: Publish atlas-server release
+      #  if: "!${{ needs.extract-version.outputs.tag_set }}"
+      #  shell: bash
+      #  run: |
+      #    cd packages/core/server/
+      #    yarn publish
+      #  env:
+      #    NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+#
+      ## Bump & Publish shared
+#
+      #- name: Bump atlas-shared package.json version
+      #  shell: bash
+      #  run: |
+      #    cd packages/core/shared/
+      #    echo "`jq '.version="${{ needs.extract-version.outputs.semver }}"' package.json`" > package.json
+#
+      #- name: Publish atlas-shared prerelease
+      #  if: ${{ needs.extract-version.outputs.tag_set }}
+      #  shell: bash
+      #  run: |
+      #    cd packages/core/shared/
+      #    yarn publish --tag ${{ needs.extract-version.outputs.tag }}
+      #  env:
+      #    NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+#
+      #- name: Publish atlas-shared release
+      #  if: "!${{ needs.extract-version.outputs.tag_set }}"
+      #  shell: bash
+      #  run: |
+      #    cd packages/core/shared/
+      #    yarn publish
+      #  env:
+      #    NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
+#
