--- a/packages/core/cli/package.json
+++ b/packages/core/cli/package.json
@@ -36,6 +36,7 @@
     "eslint": "^7.30.0"
   },
   "dependencies": {
+    "@abstractflo/atlas-devtools": "^3.1.0",
     "axios": "^0.21.1",
     "colorette": "^1.2.2",
     "inquirer": "^8.1.2",
