--- a/packages/core/client/package.json
+++ b/packages/core/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@abstractflo/atlas-client",
-  "version": "3.1.0",
+  "version": "3.1.0-next.8",
   "description": "> TODO: description",
   "author": "Florian Uhlrich <f.uhlrich@abstractmedia.de>",
   "homepage": "",
@@ -33,7 +33,7 @@
     "@altv/types-natives": "^1.4.2"
   },
   "devDependencies": {
-    "@abstractflo/atlas-shared": "*",
+    "@abstractflo/atlas-shared": "^3.1.0-next.8",
     "@altv/types-client": "*",
     "@altv/types-natives": "*"
   },
