--- a/packages/plugins/discord/package.json
+++ b/packages/plugins/discord/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@abstractflo/atlas-plugin-discord",
-  "version": "1.0.0",
+  "version": "3.1.0-next.8",
   "description": "> TODO: description",
   "author": "Florian Uhlrich <f.uhlrich@abstractmedia.de>",
   "homepage": "",
@@ -33,8 +33,8 @@
     "eris": "^0.15.1"
   },
   "devDependencies": {
-    "@abstractflo/atlas-server": "*",
-    "@abstractflo/atlas-shared": "*",
+    "@abstractflo/atlas-server": "^3.1.0-next.8",
+    "@abstractflo/atlas-shared": "^3.1.0-next.8",
     "@types/node": "^16.4.13",
     "@types/ws": "^7.4.7",
     "eris": "^0.15.1"
