--- a/packages/plugins/hydrate-mongodb/package.json
+++ b/packages/plugins/hydrate-mongodb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@abstractflo/atlas-plugin-mongodb",
-  "version": "1.0.0",
+  "version": "3.1.0-next.8",
   "description": "> TODO: description",
   "author": "Florian Uhlrich <f.uhlrich@abstractmedia.de>",
   "homepage": "",
@@ -27,12 +27,12 @@
     "local:pack": "yarn pack --filename plugin-mongodb.tgz"
   },
   "peerDependencies": {
-    "@abstractflo/atlas-shared": "^3.1.0",
-    "@abstractflo/atlas-devtools": "^3.1.0"
+    "@abstractflo/atlas-devtools": "^3.1.0",
+    "@abstractflo/atlas-shared": "^3.1.0"
   },
   "devDependencies": {
-    "@abstractflo/atlas-shared": "*",
-    "@abstractflo/atlas-devtools": "*",
+    "@abstractflo/atlas-devtools": "^3.1.0-next.8",
+    "@abstractflo/atlas-shared": "^3.1.0-next.8",
     "@types/mongodb": "3.6.11"
   },
   "dependencies": {
