--- a/packages/core/client/package.json
+++ b/packages/core/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@abstractflo/atlas-client",
-  "version": "3.1.0-next.9",
+  "version": "3.1.0-next.10",
   "description": "> TODO: description",
   "author": "Florian Uhlrich <f.uhlrich@abstractmedia.de>",
   "homepage": "",
@@ -24,16 +24,15 @@
     "watch": "rollup -cw",
     "clean": "rimraf {dist,build,types,*.d.ts,*.tgz}",
     "types": "api-extractor run --local --verbose",
-    "local:pack": "yarn pack --filename client.tgz",
-    "postinstall": "echo 'FUUU'"
+    "local:pack": "yarn pack --filename client.tgz"
   },
   "peerDependencies": {
-    "@abstractflo/atlas-shared": "^3.1.0",
-    "@altv/types-client": "^1.8.0",
+    "@abstractflo/atlas-shared": ">=3.1.0-next.0 <3.1.1",
+    "@altv/types-client": "^1.8.7",
     "@altv/types-natives": "^1.4.2"
   },
   "devDependencies": {
-    "@abstractflo/atlas-shared": "^3.1.0-next.9",
+    "@abstractflo/atlas-shared": "^3.1.0-next.10",
     "@altv/types-client": "*",
     "@altv/types-natives": "*"
   },
