--- a/.github/workflows/cd-publish.yml
+++ b/.github/workflows/cd-publish.yml
@@ -45,4 +45,4 @@ jobs:
         run: yarn build
 
       - name: Publish atlas-framework packages
-        run: lerna publish from-package --no-git-tag-version --no-push --yes
+        run: lerna publish from-package --no-git-tag-version --no-push --no-verify-access --yes
