--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "devDependencies": {
     "@microsoft/api-extractor": "^7.18.4",
+    "@rollup/plugin-replace": "^3.0.0",
     "@swc/core": "^1.2.64",
     "@types/node": "^16.3.3",
     "@typescript-eslint/parser": "^4.28.3",
