--- a/packages/core/devtools/package.json
+++ b/packages/core/devtools/package.json
@@ -39,6 +39,7 @@
     "ejs": "^3.1.6",
     "execa": "^5.1.1",
     "fs-jetpack": "^4.1.0",
+    "got": "^11.8.2",
     "import-meta-resolve": "^1.1.1",
     "inquirer": "^8.1.2",
     "js-yaml": "^4.1.0",
