--- a/packages/plugins/discord/package.json
+++ b/packages/plugins/discord/package.json
@@ -44,5 +44,8 @@
     "cors": "^2.8.5",
     "fastify": "^3.20.1",
     "rxjs": "^7.3.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
