--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "lerna run build",
     "cleanAll": "rimraf packages/**/{dist,build,types,*.d.ts,*.tgz}",
-    "bumpForRelease": "lerna version --no-push"
+    "bumpForRelease": "lerna version --tag-version-prefix='' --no-push"
   },
   "workspaces": [
     "packages/core/*",
