--- a/packages/core/server/package.json
+++ b/packages/core/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@abstractflo/atlas-server",
-  "version": "3.1.0-next.8",
+  "version": "3.1.0-rc.0",
   "description": "> TODO: description",
   "author": "Florian Uhlrich <f.uhlrich@abstractmedia.de>",
   "homepage": "",
@@ -31,7 +31,7 @@
     "@altv/types-server": "^2.0.0"
   },
   "devDependencies": {
-    "@abstractflo/atlas-shared": "^3.1.0-next.8",
+    "@abstractflo/atlas-shared": "^3.1.0-rc.0",
     "@altv/types-server": "*"
   },
   "dependencies": {
