--- a/packages/plugins/typeorm/package.json
+++ b/packages/plugins/typeorm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@abstractflo/atlas-plugin-typeorm",
-  "version": "3.1.0-next.8",
+  "version": "3.1.0-rc.0",
   "description": "> TODO: description",
   "author": "Florian Uhlrich <f.uhlrich@abstractmedia.de>",
   "homepage": "",
@@ -31,8 +31,8 @@
     "@abstractflo/atlas-shared": "^3.1.0"
   },
   "devDependencies": {
-    "@abstractflo/atlas-devtools": "^3.1.0-next.8",
-    "@abstractflo/atlas-shared": "^3.1.0-next.8"
+    "@abstractflo/atlas-devtools": "^3.1.0-rc.0",
+    "@abstractflo/atlas-shared": "^3.1.0-rc.0"
   },
   "dependencies": {
     "typeorm": "^0.2.36"
