--- a/packages/core/server/package.json
+++ b/packages/core/server/package.json
@@ -27,7 +27,7 @@
     "local:pack": "yarn pack --filename server.tgz"
   },
   "peerDependencies": {
-    "@abstractflo/atlas-shared": ">=3.1.0-next.0 <3.1.1",
+    "@abstractflo/atlas-shared": "^3.1.0-rc.0",
     "@altv/types-server": "^2.0.0"
   },
   "devDependencies": {
